[gd_scene load_steps=4 format=3 uid="uid://dqwychfyo431u"]

[ext_resource type="Script" uid="uid://c7cuqkrqridyg" path="res://scenes/pause_menu.gd" id="1_kukqi"]
[ext_resource type="Theme" uid="uid://wv7msxwmemkc" path="res://HUD_Theme.tres" id="1_n87rw"]
[ext_resource type="PackedScene" uid="uid://dg1aicas1oy6u" path="res://scenes/hat_menu.tscn" id="2_5d2l8"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_kukqi")

[node name="HatMenu" parent="." instance=ExtResource("2_5d2l8")]

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -65.0
offset_right = 38.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_n87rw")
text = "Paused!"

[node name="ChangeHat" type="Button" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -40.0
offset_right = 61.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n87rw")
text = "Change Hat"

[node name="Exit" type="Button" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -6.0
offset_right = 52.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n87rw")
text = "Exit Game"

[node name="VolumeSlider" type="VSlider" parent="PauseMenu"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -126.0
offset_right = -17.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
theme = ExtResource("1_n87rw")
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 5

[node name="VolumeLabel" type="Label" parent="PauseMenu"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -33.0
offset_right = -46.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_n87rw")
text = "Volume"

[connection signal="hat_changed" from="HatMenu" to="." method="_on_hat_menu_hat_changed"]
[connection signal="pressed" from="PauseMenu/ChangeHat" to="." method="_on_change_hat_pressed"]
[connection signal="pressed" from="PauseMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="drag_ended" from="PauseMenu/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
